# FinSight

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  FinSight_PRD.docx  README.md  _nb_dataset_swap.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
notebooks/: WM9B7_finsight.ipynb  WM9B7_reflection_draft.md  WM9B7_reflection_final.tex
scripts/: build_report_latex.py  gen_notebook.py  generate_plots.py  train_distilbert.py
src/: config.py
src/api/: main.py  middleware.py  routes.py
src/ingestion/: features.py  schema.py
src/llm/: client.py  fallback.py  gemini.py  generator.py  groq_client.py  ollama_client.py
src/models/: baseline.py  distilbert.py  urgency.py
src/monitoring/: alerts.py  drift.py
src/preprocessing/: pipeline.py
tests/: conftest.py  test_baseline.py  test_distilbert.py  test_drift.py  test_fallback.py  test_features.py  test_generator.py  test_preprocessing.py  test_routes.py  test_schema.py  test_urgency.py
