[project]
name = "finsight"
version = "0.1.0"
description = "Financial News Risk Intelligence System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "google-generativeai>=0.8",
    "groq>=0.9",
    "httpx>=0.27",
    "transformers>=4.40",
    "torch>=2.2",
    "datasets>=2.19",
    "scikit-learn>=1.4",
    "joblib>=1.4",
    "scipy>=1.13",
    "numpy>=1.26",
    "pandas>=2.2",
    "codecarbon>=2.3",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "benchmark: marks tests as latency benchmarks",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.11"
extraPaths = ["."]
typeCheckingMode = "basic"
